--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pyqt5: 5.15.7
 pyqt5-sip: 12.11.0
 pyqtwebengine: 5.15.4
 pysocks: 1.7.1
+psycopg: 3.1.17
 pywavelets: 1.4.1
 pyyaml: 6.0
 pygments: 2.15.1
